# NightOwl

./: .gitignore  LICENSE  Makefile  README.md  ROADMAP.md  STATUS.md  TODO.md  install.sh  pyproject.toml
benchmarks/: README.md  __init__.py  profiles.py  results-template.md  runner.py  summary.py  verdicts.py
benchmarks/reviews/: dvwa.md  juice-shop.md  nightowl-lab.md  webgoat.md
benchmarks/sessions/: 2026-03-26-dvwa-8f61ab4.md  2026-03-26-dvwa.md  2026-03-26-juice-shop.md  2026-03-26-webgoat-8f61ab4.md  2026-03-26-webgoat.md  2026-03-27-dvwa-8f61ab4.md  2026-03-27-webgoat-8f61ab4.md  2026-04-02-dvwa-8f61ab4.md  2026-04-02-juice-shop-8f61ab4.md  2026-04-02-webgoat-8f61ab4.md  README.md
configs/: default.yaml  example_targets.yaml
docker/: Dockerfile  docker-compose.yml
nightowl/: __init__.py
nightowl/cli/: formatters.py  main.py
nightowl/config/: __init__.py  defaults.py  schema.py  scope.py
nightowl/core/: __init__.py  engine.py  events.py  pipeline.py  plugin_base.py  plugin_loader.py  task_queue.py
nightowl/db/: __init__.py  database.py  repositories.py
nightowl/models/: __init__.py  config.py  finding.py  scan.py  target.py
nightowl/modules/: __init__.py
nightowl/reporting/: __init__.py  generator.py  html_report.py  markdown_report.py  pdf_report.py
nightowl/utils/: __init__.py  crypto.py  logger.py  network.py  rate_limiter.py  web_auth.py  web_discovery.py
nightowl/web/: app.py
plugins/: example_plugin.py
tests/: conftest.py
tests/integration/: test_web_app.py  test_web_security.py
tests/unit/: test_auth_tester.py  (+34 more)
(+831 files in other folders)
